# pinky-fused-nav

./: .gitignore  README.md  deploy_to_pi.sh  room.pgm  room.yaml  stop_pinky.sh
decks/my-deck/: slide-01.html
src/: README.md
src/doc/portfolio/: module1_plan.md
src/pinky_bringup/: package.xml
src/pinky_bringup/launch/: bringup_robot.launch.xml
src/pinky_bringup/pinky_bringup/: bringup.py
src/pinky_bringup/test/: phase1a_gyro_check.py  phase1a_watchdog_check.py
src/pinky_description/launch/: upload_robot.launch.py
src/pinky_description/urdf/: pinky.urdf.xacro  robot.urdf.xacro
src/pinky_imu_bno055/: package.xml
src/pinky_imu_bno055/src/: main_node.cpp
src/pinky_navigation/docs/: scan_fusion_design.md
src/pinky_navigation/launch/: ekf.launch.xml  web_nav2_mppi.launch.xml
src/pinky_navigation/params/: ekf.yaml  mapper_params.yaml  nav2_params.yaml  nav2_params_smac_mppi.yaml
src/pinky_navigation/rviz/: depth_map_view.rviz  ekf_view.rviz
src/pinky_navigation/test/: README.md  objects.example.csv  score_map.py  verify_floor_rejection.sh
src/pinky_perception/: CMakeLists.txt  package.xml
src/pinky_perception/config/: scan_fuser.yaml
src/pinky_perception/launch/: scan_fuser.launch.xml
src/pinky_perception/scripts/: stage_a_floor_fit.py  stage_a_wall_pitch.py
src/pinky_perception/src/: scan_fuser_node.cpp
src/ros2_astra_camera/astra_camera/include/astra_camera/: ros_param_backend.h
src/ros2_astra_camera/astra_camera/src/: ros_param_backend.cpp
src/sllidar_ros2/launch/: sllidar_c1_launch.py
