<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pinky_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kyung133851@pinklab.art">pl3</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>tf_transformations</depend>
  <exec_depend>astra_camera</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>pinky_perception</exec_depend>
  <exec_depend>pinky_imu_bno055</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
